// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea should prioritize disabled over error styles 1`] = `
.circuit-4 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 120ms ease-in-out;
  transition: border-color 120ms ease-in-out;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
  margin: 0;
  padding-right: calc( 12px + 16px + 12px );
  overflow: auto;
  resize: vertical;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

<label
  class="circuit-4"
  for="input_11"
>
  <div
    class="circuit-2 circuit-3"
    disabled=""
  >
    <textarea
      aria-invalid="true"
      class="circuit-0 circuit-1"
      disabled=""
      id="input_11"
    />
  </div>
</label>
`;

exports[`TextArea should prioritize disabled over warning styles 1`] = `
.circuit-7 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-5 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-5,
label + .circuit-5 {
  margin-top: 4px;
}

.circuit-3 {
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  opacity: 1;
  position: absolute;
  top: 1px;
  right: 1px;
  pointer-events: none;
  color: #5C656F;
  padding: 12px;
  height: 40px;
  width: 40px;
}

.circuit-2 {
  display: block;
  height: 100%;
  width: 100%;
  color: #DB4D4D;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 120ms ease-in-out;
  transition: border-color 120ms ease-in-out;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
  margin: 0;
  padding-right: calc( 12px + 16px + 12px );
  overflow: auto;
  resize: vertical;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:not(:focus) {
  border-color: #D8A413;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #D8A413;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #D8A413;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #D8A413;
}

.circuit-0:not(:focus)::placeholder {
  color: #D8A413;
}

.circuit-0:not(:focus) {
  border-color: #EA7A7A;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus)::placeholder {
  color: #EA7A7A;
}

<label
  class="circuit-7"
  for="input_12"
>
  <div
    class="circuit-5 circuit-6"
  >
    <textarea
      aria-invalid="true"
      class="circuit-0 circuit-1"
      id="input_12"
    />
    <div
      class="circuit-3 circuit-4"
    >
      <svg
        class="circuit-2"
        fill="none"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#circle_cross_small_svg__clip0)"
        >
          <path
            clip-rule="evenodd"
            d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zM6.207 4.793a1 1 0 00-1.414 1.414L6.586 8 4.793 9.793a1 1 0 001.414 1.414L8 9.414l1.793 1.793a1 1 0 001.414-1.414L9.414 8l1.793-1.793a1 1 0 00-1.414-1.414L8 6.586 6.207 4.793z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </g>
        <defs>
          <clippath
            id="circle_cross_small_svg__clip0"
          >
            <path
              d="M0 0h16v16H0V0z"
              fill="#fff"
            />
          </clippath>
        </defs>
      </svg>
    </div>
  </div>
</label>
`;

exports[`TextArea should prioritize error over optional styles 1`] = `
.circuit-7 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-5 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-5,
label + .circuit-5 {
  margin-top: 4px;
}

.circuit-3 {
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  opacity: 1;
  position: absolute;
  top: 1px;
  right: 1px;
  pointer-events: none;
  color: #5C656F;
  padding: 12px;
  height: 40px;
  width: 40px;
}

.circuit-2 {
  display: block;
  height: 100%;
  width: 100%;
  color: #DB4D4D;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 120ms ease-in-out;
  transition: border-color 120ms ease-in-out;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
  margin: 0;
  background-color: #FAFBFC;
  border-style: dashed;
  box-shadow: none;
  padding-right: calc( 12px + 16px + 12px );
  overflow: auto;
  resize: vertical;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:not(:focus) {
  border-color: #EA7A7A;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus)::placeholder {
  color: #EA7A7A;
}

<label
  class="circuit-7"
  for="input_10"
>
  <div
    class="circuit-5 circuit-6"
  >
    <textarea
      aria-invalid="true"
      class="circuit-0 circuit-1"
      id="input_10"
    />
    <div
      class="circuit-3 circuit-4"
    >
      <svg
        class="circuit-2"
        fill="none"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#circle_cross_small_svg__clip0)"
        >
          <path
            clip-rule="evenodd"
            d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zM6.207 4.793a1 1 0 00-1.414 1.414L6.586 8 4.793 9.793a1 1 0 001.414 1.414L8 9.414l1.793 1.793a1 1 0 001.414-1.414L9.414 8l1.793-1.793a1 1 0 00-1.414-1.414L8 6.586 6.207 4.793z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </g>
        <defs>
          <clippath
            id="circle_cross_small_svg__clip0"
          >
            <path
              d="M0 0h16v16H0V0z"
              fill="#fff"
            />
          </clippath>
        </defs>
      </svg>
    </div>
  </div>
</label>
`;

exports[`TextArea should render with a Tooltip when passed the validationHint prop 1`] = `
.circuit-8 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-6 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-6,
label + .circuit-6 {
  margin-top: 4px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 120ms ease-in-out;
  transition: border-color 120ms ease-in-out;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
  margin: 0;
  padding-right: calc( 12px + 16px + 12px );
  overflow: auto;
  resize: vertical;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2 {
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  position: absolute;
  top: 1px;
  right: 1px;
  pointer-events: none;
  color: #5C656F;
  padding: 12px;
  height: 40px;
  width: 40px;
}

.circuit-4 {
  display: inline-block;
  width: auto;
  max-width: 280px;
  min-width: 120px;
  background-color: #212933;
  color: #FFFFFF;
  border-radius: 4px;
  padding: 8px 12px;
  position: absolute;
  z-index: 40;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  font-size: 13px;
  line-height: 20px;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.07), 0 0 1px 0 rgba(12,15,20,0.07),0 2px 2px 0 rgba(12,15,20,0.07);
  right: 50%;
  right: calc(50% - (16px + 4px));
  bottom: 100%;
  bottom: calc(100% + 12px);
  right: 1px;
}

.circuit-4::after {
  display: block;
  content: '';
  width: 0;
  height: 0;
  position: absolute;
  border: 8px solid transparent;
}

.circuit-4::after {
  right: 12px;
}

.circuit-4::after {
  top: 100%;
  border-top-color: #212933;
}

<label
  class="circuit-8"
  for="input_4"
>
  <div
    class="circuit-6 circuit-7"
  >
    <textarea
      aria-invalid="false"
      class="circuit-0 circuit-1"
      id="input_4"
    />
    <div
      class="circuit-2 circuit-3"
    />
    <div
      class="circuit-4 circuit-5"
    >
      Validation hint
    </div>
  </div>
</label>
`;

exports[`TextArea should render with a prefix when passed the prefix prop 1`] = `
.circuit-6 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-4,
label + .circuit-4 {
  margin-top: 4px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 120ms ease-in-out;
  transition: border-color 120ms ease-in-out;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
  margin: 0;
  padding-right: calc( 12px + 16px + 12px );
  overflow: auto;
  resize: vertical;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2 {
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  position: absolute;
  top: 1px;
  right: 1px;
  pointer-events: none;
  color: #5C656F;
  padding: 12px;
  height: 40px;
  width: 40px;
}

<label
  class="circuit-6"
  for="input_2"
>
  <div
    class="circuit-4 circuit-5"
  >
    <textarea
      aria-invalid="false"
      class="circuit-0 circuit-1"
      id="input_2"
    />
    <div
      class="circuit-2 circuit-3"
    />
  </div>
</label>
`;

exports[`TextArea should render with a suffix when passed the suffix prop 1`] = `
.circuit-6 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-4,
label + .circuit-4 {
  margin-top: 4px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 120ms ease-in-out;
  transition: border-color 120ms ease-in-out;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
  margin: 0;
  padding-right: calc( 12px + 16px + 12px );
  overflow: auto;
  resize: vertical;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2 {
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  position: absolute;
  top: 1px;
  right: 1px;
  pointer-events: none;
  color: #5C656F;
  padding: 12px;
  height: 40px;
  width: 40px;
}

<label
  class="circuit-6"
  for="input_3"
>
  <div
    class="circuit-4 circuit-5"
  >
    <textarea
      aria-invalid="false"
      class="circuit-0 circuit-1"
      id="input_3"
    />
    <div
      class="circuit-2 circuit-3"
    />
  </div>
</label>
`;

exports[`TextArea should render with default styles 1`] = `
.circuit-6 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-4,
label + .circuit-4 {
  margin-top: 4px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 120ms ease-in-out;
  transition: border-color 120ms ease-in-out;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
  margin: 0;
  padding-right: calc( 12px + 16px + 12px );
  overflow: auto;
  resize: vertical;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2 {
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  position: absolute;
  top: 1px;
  right: 1px;
  pointer-events: none;
  color: #5C656F;
  padding: 12px;
  height: 40px;
  width: 40px;
}

<label
  class="circuit-6"
  for="input_1"
>
  <div
    class="circuit-4 circuit-5"
  >
    <textarea
      aria-invalid="false"
      class="circuit-0 circuit-1"
      id="input_1"
    />
    <div
      class="circuit-2 circuit-3"
    />
  </div>
</label>
`;

exports[`TextArea should render with disabled styled when passed the disabled prop 1`] = `
.circuit-4 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 120ms ease-in-out;
  transition: border-color 120ms ease-in-out;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
  margin: 0;
  padding-right: calc( 12px + 16px + 12px );
  overflow: auto;
  resize: vertical;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

<label
  class="circuit-4"
  for="input_9"
>
  <div
    class="circuit-2 circuit-3"
    disabled=""
  >
    <textarea
      aria-invalid="false"
      class="circuit-0 circuit-1"
      disabled=""
      id="input_9"
    />
  </div>
</label>
`;

exports[`TextArea should render with inline styles when passed the inline prop 1`] = `
.circuit-6 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 120ms ease-in-out;
  transition: border-color 120ms ease-in-out;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
  margin: 0;
  padding-right: calc( 12px + 16px + 12px );
  overflow: auto;
  resize: vertical;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2 {
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  position: absolute;
  top: 1px;
  right: 1px;
  pointer-events: none;
  color: #5C656F;
  padding: 12px;
  height: 40px;
  width: 40px;
}

.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  display: inline-block;
  margin-right: 16px;
}

label > .circuit-4,
label + .circuit-4 {
  margin-top: 4px;
}

<label
  class="circuit-6"
  for="input_13"
>
  <div
    class="circuit-4 circuit-5"
  >
    <textarea
      aria-invalid="false"
      class="circuit-0 circuit-1"
      id="input_13"
    />
    <div
      class="circuit-2 circuit-3"
    />
  </div>
</label>
`;

exports[`TextArea should render with invalid styles when passed the invalid prop 1`] = `
.circuit-7 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-5 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-5,
label + .circuit-5 {
  margin-top: 4px;
}

.circuit-3 {
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  opacity: 1;
  position: absolute;
  top: 1px;
  right: 1px;
  pointer-events: none;
  color: #5C656F;
  padding: 12px;
  height: 40px;
  width: 40px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 120ms ease-in-out;
  transition: border-color 120ms ease-in-out;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
  margin: 0;
  padding-right: calc( 12px + 16px + 12px );
  overflow: auto;
  resize: vertical;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:not(:focus) {
  border-color: #EA7A7A;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #EA7A7A;
}

.circuit-0:not(:focus)::placeholder {
  color: #EA7A7A;
}

.circuit-2 {
  display: block;
  height: 100%;
  width: 100%;
  color: #DB4D4D;
}

<label
  class="circuit-7"
  for="input_6"
>
  <div
    class="circuit-5 circuit-6"
  >
    <textarea
      aria-invalid="true"
      class="circuit-0 circuit-1"
      id="input_6"
    />
    <div
      class="circuit-3 circuit-4"
    >
      <svg
        class="circuit-2"
        fill="none"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#circle_cross_small_svg__clip0)"
        >
          <path
            clip-rule="evenodd"
            d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zM6.207 4.793a1 1 0 00-1.414 1.414L6.586 8 4.793 9.793a1 1 0 001.414 1.414L8 9.414l1.793 1.793a1 1 0 001.414-1.414L9.414 8l1.793-1.793a1 1 0 00-1.414-1.414L8 6.586 6.207 4.793z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </g>
        <defs>
          <clippath
            id="circle_cross_small_svg__clip0"
          >
            <path
              d="M0 0h16v16H0V0z"
              fill="#fff"
            />
          </clippath>
        </defs>
      </svg>
    </div>
  </div>
</label>
`;

exports[`TextArea should render with no margin styles when passed the noMargin prop 1`] = `
.circuit-6 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 120ms ease-in-out;
  transition: border-color 120ms ease-in-out;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
  margin: 0;
  padding-right: calc( 12px + 16px + 12px );
  overflow: auto;
  resize: vertical;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2 {
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  position: absolute;
  top: 1px;
  right: 1px;
  pointer-events: none;
  color: #5C656F;
  padding: 12px;
  height: 40px;
  width: 40px;
}

.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  margin-bottom: 0;
}

label > .circuit-4,
label + .circuit-4 {
  margin-top: 4px;
}

<label
  class="circuit-6"
  for="input_14"
>
  <div
    class="circuit-4 circuit-5"
  >
    <textarea
      aria-invalid="false"
      class="circuit-0 circuit-1"
      id="input_14"
    />
    <div
      class="circuit-2 circuit-3"
    />
  </div>
</label>
`;

exports[`TextArea should render with optional styles when passed the optional prop 1`] = `
.circuit-6 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-4 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-4,
label + .circuit-4 {
  margin-top: 4px;
}

.circuit-2 {
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  position: absolute;
  top: 1px;
  right: 1px;
  pointer-events: none;
  color: #5C656F;
  padding: 12px;
  height: 40px;
  width: 40px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 120ms ease-in-out;
  transition: border-color 120ms ease-in-out;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
  margin: 0;
  background-color: #FAFBFC;
  border-style: dashed;
  box-shadow: none;
  padding-right: calc( 12px + 16px + 12px );
  overflow: auto;
  resize: vertical;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<label
  class="circuit-6"
  for="input_8"
>
  <div
    class="circuit-4 circuit-5"
  >
    <textarea
      aria-invalid="false"
      class="circuit-0 circuit-1"
      id="input_8"
    />
    <div
      class="circuit-2 circuit-3"
    />
  </div>
</label>
`;

exports[`TextArea should render with valid styles when passed the showValid prop 1`] = `
.circuit-7 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-5 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-5,
label + .circuit-5 {
  margin-top: 4px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 120ms ease-in-out;
  transition: border-color 120ms ease-in-out;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
  margin: 0;
  padding-right: calc( 12px + 16px + 12px );
  overflow: auto;
  resize: vertical;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3 {
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  opacity: 1;
  position: absolute;
  top: 1px;
  right: 1px;
  pointer-events: none;
  color: #5C656F;
  padding: 12px;
  height: 40px;
  width: 40px;
}

.circuit-2 {
  display: block;
  height: 100%;
  width: 100%;
  color: #47995A;
}

<label
  class="circuit-7"
  for="input_7"
>
  <div
    class="circuit-5 circuit-6"
  >
    <textarea
      aria-invalid="false"
      class="circuit-0 circuit-1"
      id="input_7"
    />
    <div
      class="circuit-3 circuit-4"
    >
      <svg
        class="circuit-2"
        fill="none"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#circle_checkmark_small_svg__clip0)"
        >
          <path
            clip-rule="evenodd"
            d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm3.812 6.156a1 1 0 00-1.562-1.249L6.948 9.035l-1.21-1.21a1 1 0 00-1.414 1.414l2 2a1 1 0 001.488-.083l4-5z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </g>
        <defs>
          <clippath
            id="circle_checkmark_small_svg__clip0"
          >
            <path
              d="M0 0h16v16H0V0z"
              fill="#fff"
            />
          </clippath>
        </defs>
      </svg>
    </div>
  </div>
</label>
`;

exports[`TextArea should render with warning styles when passed the hasWarning prop 1`] = `
.circuit-7 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-5 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-5,
label + .circuit-5 {
  margin-top: 4px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 120ms ease-in-out;
  transition: border-color 120ms ease-in-out;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
  margin: 0;
  padding-right: calc( 12px + 16px + 12px );
  overflow: auto;
  resize: vertical;
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-0:not(:focus) {
  border-color: #D8A413;
}

.circuit-0:not(:focus)::-webkit-input-placeholder {
  color: #D8A413;
}

.circuit-0:not(:focus)::-moz-placeholder {
  color: #D8A413;
}

.circuit-0:not(:focus):-ms-input-placeholder {
  color: #D8A413;
}

.circuit-0:not(:focus)::placeholder {
  color: #D8A413;
}

.circuit-3 {
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  opacity: 1;
  position: absolute;
  top: 1px;
  right: 1px;
  pointer-events: none;
  color: #5C656F;
  padding: 12px;
  height: 40px;
  width: 40px;
}

.circuit-2 {
  display: block;
  height: 100%;
  width: 100%;
  color: #D8A413;
}

<label
  class="circuit-7"
  for="input_5"
>
  <div
    class="circuit-5 circuit-6"
  >
    <textarea
      aria-invalid="false"
      class="circuit-0 circuit-1"
      id="input_5"
    />
    <div
      class="circuit-3 circuit-4"
    >
      <svg
        class="circuit-2"
        fill="none"
        height="16"
        role="img"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#circle_warning_small_svg__clip0)"
        >
          <path
            clip-rule="evenodd"
            d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm1 4a1 1 0 00-2 0v4.5a1 1 0 002 0V4zm0 7.5a1 1 0 10-2 0v.5a1 1 0 102 0v-.5z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </g>
        <defs>
          <clippath
            id="circle_warning_small_svg__clip0"
          >
            <path
              d="M0 0h16v16H0V0z"
              fill="#fff"
            />
          </clippath>
        </defs>
      </svg>
    </div>
  </div>
</label>
`;
